--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,16 @@
 <h1>Kickin It</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+
+<%= link_to "Add a new Kick", new_kick_path, :class => "btn btn-info btn-sm", id: "newId" %>
+
+<div class="table-responsive">
+    <table class="table table-hover">
+      <% @kicks.each do |k| %>
+
+          <tr>
+            <td><%= link_to k.title, kick_path(k), :class => "btn btn-primary btn-xs btn-block" %></td>
+            <td><%= k.description %></td>
+            <td><%= k.time %></td>
+          </tr>
+      <% end %>
+    </table>
+</div>
