--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,15 @@
   <title>KickinIt</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+  <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+  <script src='http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.js'></script>
+
+  <link href='http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.css' rel='stylesheet' />
+  <!--[if lte IE 8]>
+  <link href='http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.ie.css' rel='stylesheet' >
+  <![endif]-->
+
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -15,8 +24,8 @@
 
   <ul class="nav navbar-nav navbar-right">
     <% if user_signed_in? %>
-        <li><a href="#">Signed in as <%= current_user.email %></a></li>
-        <li> <%= link_to "not you?", destroy_user_session_path, method: :delete %> </li>
+        <li><a href="#"><%= current_user.email %></a></li>
+        <li> <%= link_to "Sign out", destroy_user_session_path, method: :delete %> </li>
 
     <% else %>
         <li class="dropdown">
@@ -38,9 +47,9 @@
 
 
 <div class="container">
-  <div class="row">
-    <div class="span9"><%= yield %></div>
-  </div>
+
+    <%= yield %>
+
 </div>
 
 </body>
