removing gmaps, trying 'find kicks by user_id'

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,3 +3,4 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import '../../../vendor/assets/stylesheets/bootstrap/bootstrap.scss';
+@import 'leaflet.css';
