--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,30 +1,26 @@
 <div class="row">
 
-  <div class="col-md-2">
-    <h3><%= current_user.name %></h3>       <!--do something with current_user.sign_in_count  !!!   -->
-    <p> <%=link_to "Edit Profile", edit_user_registration_path %> </p>
-  </div>
+  <%= render 'sidebar' %>
 
   <div class="col-md-4">
-    <%= link_to "Add a new Kick", new_kick_path, :class => "btn btn-info btn-sm", id: "newId" %>
+    <%= link_to "Add a new Kick", new_kick_path, :class => "btn btn-info btn-block", id: "newId" %>
 
     <div class="table-responsive">
       <table class="table table-hover">
-        <% @kicks.each do |k| %>
+        <% @kicks.each do |kick| %>
 
             <tr>
-              <td><%= link_to k.title, kick_path(k), :class => "btn btn-primary btn-xs btn-block" %></td>
-              <td><%= k.description %></td>
-              <td><%= k.time %></td>
+              <td><%= link_to kick.title, kick_path(kick), :class => "btn btn-primary btn-xs btn-block" %></td>
+              <td><%= kick.description %></td>
+              <td><%= kick.time %></td>
+              <td><%= kick.location %></td>
+              <td>Posted <%= time_ago_in_words(kick.created_at) %> ago</td>
             </tr>
         <% end %>
       </table>
     </div>
   </div>
 
-  <div class="col-md-6">
-    <div id="map"></div>
-  </div>
+   <%= render 'mapbox' %>
 </div>
-
 
