adding lat/long to Kick model

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,4 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import '../../../vendor/assets/stylesheets/bootstrap/bootstrap.scss';
+//@import "../../../vendor/assets/stylesheets/flat-ui-sass/flat-ui.sass";
+
 @import 'leaflet.css';
