--- a/app/views/home/_mapbox.html.erb
+++ b/app/views/home/_mapbox.html.erb
@@ -1,3 +1,12 @@
-<div class="col-md-6">
+<!--<div class="col-md-6" style="width: 42%;">-->
   <div id="mapbox"></div>
-</div>
+<!--</div>-->
+<style>
+    .leaflet-left {
+        left: 145px !important;
+    }
+        .leaflet-control-attribution.leaflet-control a{
+            display: none !important;
+        }
+</style>
+
