--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,26 +1,35 @@
-<div class="row">
+<!--<div class="row">-->
 
-  <%= render 'sidebar' %>
 
-  <div class="col-md-4">
+  <div class="main" style="width: 100%; position: absolute">
+
+    <%= render 'mapbox' %>
+    <%= render 'sidebar' %>
+
+
+    <!--<div class="col-md-4">-->
     <%= link_to "Add a new Kick", new_kick_path, :class => "btn btn-info btn-block", id: "newId" %>
+    <div class="kicks-all" style="position: absolute;      z-index: 2;
+            background: rgba(0, 0, 0, 0.64);
+            width: 427px;
+            right: 0;
+            color: white;top: 0;
+            padding: 24px;
+            height: 633px;
+            overflow-y: scroll;">
 
-    <div class="table-responsive">
-      <table class="table table-hover">
-        <% @kicks.each do |kick| %>
+      <% @kicks.each do |kick| %>
 
-            <tr>
-              <td><%= link_to kick.title, kick_path(kick), :class => "btn btn-primary btn-xs btn-block" %></td>
-              <td><%= kick.description %></td>
-              <td><%= kick.time %></td>
-              <td><%= kick.location %></td>
-              <td>Posted <%= time_ago_in_words(kick.created_at) %> ago</td>
-            </tr>
-        <% end %>
-      </table>
+
+          <div class="kick-contr">
+            <div class="title"><%= link_to kick.title, kick_path(kick), :class => "btn btn-primary btn-xs btn-block" %></div>
+            <div class="loc"><%= kick.location %></div>
+            <div class="desc"><%= kick.description %></div>
+            <div class="in">Posted <%= time_ago_in_words(kick.created_at) %> ago</div>
+          </div>
+      <% end %>
     </div>
+
+    <!--</div>-->
   </div>
-
-   <%= render 'mapbox' %>
-</div>
-
+<!--</div>-->
