--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -3,29 +3,50 @@
 <%= link_to "edit password (make new view)", edit_user_registration_path %>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <div><%= f.label :email %><br />
+      <%= f.email_field :email, :autofocus => true, class: "form-control",:placeholder => "email"   %></div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+    <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.password_field :password, :autocomplete => "off", class: "form-control" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+    <div><%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, class: "form-control" %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+    <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+      <%= f.password_field :current_password, class: "form-control" %></div>  <br />
 
-  <div><%= f.submit "Update" %></div>
+    <div id="slider1" class="ui-slider">
+    </div>
+    <p>
+      <label for="talklevels-label"></label>
+      <input type="text" id="levels1" style="border: 0; color: #f6931f; font-weight: bold;" />
+    </p>
+
+    <div id="slider2" class="ui-slider">
+    </div>
+    <p>
+      <label for="talklevels-label"></label>
+      <input type="text" id="levels2" style="border: 0; color: #f6931f; font-weight: bold;" />
+    </p>
+
+    <div id="slider3" class="ui-slider">
+    </div>
+    <p>
+      <label for="talklevels-label"></label>
+      <input type="text" id="levels3" style="border: 0; color: #f6931f; font-weight: bold;" />
+    </p>
+
+    <div><%= f.submit "Update", :class => "btn btn-primary"%></div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Not stoked on Kickin It? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+<p>Not stoked on Kickin It? <%= button_to "Ditch Kickin it forever", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => "btn btn-xs btn-danger" %></p>
 
 <%= link_to "Back", :back %>
