--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -35,8 +35,85 @@
   //  height: 55px !important;
   //  padding-left: 7px;
   //}
+  .added {
+    border: 5px dashed red;
+    display: none;
+    margin-left: -30px;
+    margin-top: -54px;
+    width: 70px;
+    height: 70px;
+    border-radius: 35px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 1 !important;
+  }
+
+
+  .leaflet-marker-icon {
+
+    //&:hover{
+    //  outline: 5px solid red;
+    //  border-radius:5px;
+    //  outline-style:dashed;
+    //}
+
+    &.selected{
+
+      //outline: 6px solid green;
+    }
+
+
+  }
+}
+
+.anim{
+  height: 70px !important;
+  width: 70px !important;
+  margin-top: -12px;
+  margin-left: -14px;
+  opacity: 1 !important;
 }
 
 #slider1, #slider2, #slider3{
   width: 217px;
+}
+
+.leaflet-center {
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+.leaflet-control-geosearch, .leaflet-control-geosearch ul {
+  border-radius: 7px;
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
+  margin: 10px 0 0 206px;
+  padding: 5px;
+  width: 100%;
+  height: auto;
+}
+.leaflet-control-geosearch-msg ul {
+  list-style: none;
+  display: none;
+  height: auto;
+  background: none;
+  padding: 0;
+}
+.leaflet-control-geosearch ul li {
+  background: none repeat scroll 0 0 rgba(255, 255, 255, 0.75);
+  border-radius: 4px;
+  margin: 2px 0;
+  padding: 4px;
+  font: 12px arial;
+  text-indent: 4px;
+}
+.leaflet-container .leaflet-control-geosearch input {
+  width: 100%;
+  height: 28px;
+  padding: 0;
+  text-indent: 8px;
+  background: rgba(255, 255, 255, 0.75);
+  border-radius: 4px;
+  border: none;
 }
