--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,8 @@
 
     <!--<div class="col-md-4">-->
     <%= link_to "Add a new Kick", new_kick_path, :class => "btn btn-info btn-block", id: "newId" %>
+    <button id="foursquare-button" class="btn btn-info btn-block">Check foursquare</button>
+
     <div class="kicks-all" style="position: absolute;      z-index: 2;
             background: rgba(0, 0, 0, 0.64);
             width: 427px;
@@ -17,15 +19,15 @@
             padding: 24px;
             height: 633px;
             overflow-y: scroll;">
+      <button id="single-all" class="btn btn-info btn-block" data-text-single="Single view?" data-text-all="View All">Single view?</button>
 
       <% @kicks.each do |kick| %>
 
-
-          <div class="kick-contr">
-            <div class="title"><%= link_to kick.title, kick_path(kick), :class => "btn btn-primary btn-xs btn-block" %></div>
+          <div class="kick-contr kick-list-<%= kick.id %>" id="<%= kick.id %>" >
+            <div class="title"><%= link_to kick.title, kick_path(kick), :class => "btn btn-primary btn-large btn-block" %></div>
             <div class="loc"><%= kick.location %></div>
             <div class="desc"><%= kick.description %></div>
-            <div class="in">Posted <%= time_ago_in_words(kick.created_at) %> ago</div>
+            <div class="in">Posted <%= time_ago_in_words(kick.created_at) %> ago by <%= kick.username %></div>
           </div>
       <% end %>
     </div>
