--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -8,7 +8,11 @@
   margin: 32px 0 20px 0;
   border-top: 1px solid rgba(128, 128, 128, 0.26);
 
-  .title, .loc {
+  .title {
+    height:20px;
+    display: inline-block;
+  }
+  .loc {
     height:20px;
     display: inline-block;
   }
@@ -36,7 +40,7 @@
   //  padding-left: 7px;
   //}
   .added {
-    border: 5px dashed red;
+    border: 5px dashed #3498db;
     display: none;
     margin-left: -30px;
     margin-top: -54px;
@@ -47,6 +51,7 @@
     left: 0;
     top: 0;
     opacity: 1 !important;
+    z-index: 4444;
   }
 
 
@@ -67,6 +72,11 @@
   }
 }
 
+.fa{
+  color: rgb(7, 166, 216);
+  font-size: 46px;
+}
+
 .anim{
   height: 70px !important;
   width: 70px !important;
@@ -78,21 +88,30 @@
 #slider1, #slider2, #slider3{
   width: 217px;
 }
-
 .leaflet-center {
   width: 40%;
   margin-left: auto;
   margin-right: auto;
   position: relative;
 }
-.leaflet-control-geosearch, .leaflet-control-geosearch ul {
+
+.leaflet-control-geosearch {
   border-radius: 7px;
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
   margin: 10px 0 0 206px;
   padding: 5px;
   width: 100%;
   height: auto;
+  ul {
+    border-radius: 7px;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
+    margin: 10px 0 0 206px;
+    padding: 5px;
+    width: 100%;
+    height: auto;
+  }
 }
+
 .leaflet-control-geosearch-msg ul {
   list-style: none;
   display: none;
@@ -100,14 +119,20 @@
   background: none;
   padding: 0;
 }
-.leaflet-control-geosearch ul li {
-  background: none repeat scroll 0 0 rgba(255, 255, 255, 0.75);
-  border-radius: 4px;
-  margin: 2px 0;
-  padding: 4px;
-  font: 12px arial;
-  text-indent: 4px;
+
+.leaflet-control-geosearch{
+  ul{
+    li {
+      background: none repeat scroll 0 0 rgba(255, 255, 255, 0.75);
+      border-radius: 4px;
+      margin: 2px 0;
+      padding: 4px;
+      font: 12px arial;
+      text-indent: 4px;
+    }
+  }
 }
+
 .leaflet-container .leaflet-control-geosearch input {
   width: 100%;
   height: 28px;
