--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -45,6 +45,9 @@
     <div><%= f.submit "Update", :class => "btn btn-primary"%></div>
 <% end %>
 
+<button id="Update-profile">update</button>
+
+
 <h3>Cancel my account</h3>
 
 <p>Not stoked on Kickin It? <%= button_to "Ditch Kickin it forever", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => "btn btn-xs btn-danger" %></p>
