--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,37 +1,28 @@
-<!--<div class="row">-->
+<div class="main">
 
+  <%= render 'mapbox' %>
+  <%= render 'sidebar' %>
 
-  <div class="main" style="width: 100%; position: absolute">
+  <%= link_to "Add a new Kick", new_kick_path, :class => "btn btn-info btn-block", id: "newId" %>
+  <button id="foursquare-button" class="btn btn-info btn-block">Check foursquare</button>
 
-    <%= render 'mapbox' %>
-    <%= render 'sidebar' %>
+  <div class="kicks-all">
+    <button id="single-all" class="btn btn-info btn-block" data-text-single="Single view?" data-text-all="View All">Single view?</button>
 
+    <% @kicks.each do |kick| %>
 
-    <!--<div class="col-md-4">-->
-    <%= link_to "Add a new Kick", new_kick_path, :class => "btn btn-info btn-block", id: "newId" %>
-    <button id="foursquare-button" class="btn btn-info btn-block">Check foursquare</button>
-
-    <div class="kicks-all" style="position: absolute;      z-index: 2;
-            background: rgba(0, 0, 0, 0.64);
-            width: 427px;
-            right: 0;
-            color: white;top: 0;
-            padding: 24px;
-            height: 633px;
-            overflow-y: scroll;">
-      <button id="single-all" class="btn btn-info btn-block" data-text-single="Single view?" data-text-all="View All">Single view?</button>
-
-      <% @kicks.each do |kick| %>
-
-          <div class="kick-contr kick-list-<%= kick.id %>" id="<%= kick.id %>" >
-            <div class="title"><%= link_to kick.title, kick_path(kick), :class => "btn btn-primary btn-large btn-block" %></div> <br>
-            <div class="loc"><%= kick.location %></div>
-            <div class="desc"><%= kick.description %></div>
-            <div class="in">Posted <%= time_ago_in_words(kick.created_at) %> ago by <%= link_to kick.username, user_path(kick.username) %></div>
+        <div class="kick-contr kick-list-<%= kick.id %>" id="<%= kick.id %>" >
+          <div class="title"><%= link_to kick.title, kick_path(kick), :class => "btn btn-primary btn-large btn-block" %></div> <br>
+          <div class="loc"><%= kick.location %></div>
+          <div class="desc"><%= kick.description %></div>
+          <div class="in">Posted <%= time_ago_in_words(kick.created_at) %> ago by
+            <% if kick.username == current_user.permalink %>
+                me
+            <% else %>
+                <%= link_to kick.username, profile_path(kick.username) %>
+            <% end %>
           </div>
-      <% end %>
-    </div>
-
-    <!--</div>-->
+        </div>
+    <% end %>
   </div>
-<!--</div>-->
+</div>
