--- a/app/views/kicks/_form.html.erb
+++ b/app/views/kicks/_form.html.erb
@@ -2,7 +2,6 @@
     <% if @kick.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@kick.errors.count, "error") %> prohibited this location from being saved:</h2>
-
           <ul>
             <% @kick.errors.full_messages.each do |msg| %>
                 <li><%= msg %></li>
@@ -18,20 +17,28 @@
       <%= f.text_field :description, class: "form-control",:placeholder => "Whats happening?"  %>
     </div>
     <div class="form-group">
-      <%= f.text_field :time, class: "form-control", :placeholder => "What time?"  %>
+      <%= f.text_field :time, class: "form-control", :id => "timepicker", :placeholder => "What time?"  %>
     </div>
     <div class="form-group">
-      <%= f.text_field :location, class: "form-control"  %>
+      <%= f.text_field :location, class: "form-control", :placeholder => "Where?" %>
     </div>
-    <div class="form-group">
+    <div class="form-group" style="opacity:0.4">
       <%= f.text_field :latitude, class: "form-control",:placeholder => "lat"  %>
     </div>
-    <div class="form-group">
+    <div class="form-group" style="opacity:0.4">
       <%= f.text_field :longitude, class: "form-control", :placeholder => "lng"  %>
     </div>
+
+    <div id="deb-scale" class="ui-slider"></div>
+    <p>
+      <label for="talklevels-label"></label>
+      <input type="text" id="deb-input" style="border: 0; color: #f6931f; font-weight: bold;" />
+    </p>
 
     <div class="actions">
       <%= f.submit class: "btn btn-large btn-block btn-info" %>
     </div>
-<% end %>
 
+
+
+<% end %>
